--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "marked": "^15.0.7",
     "notivue": "^2.4.5",
     "pinia": "^2.3.1",
@@ -8,7 +9,7 @@
     "vue-router": "^4.5.0",
     "webextension-polyfill": "^0.12.0"
   },
-  "description": "A Vue 3 + Vite project for building Chrome extensions",
+  "description": "小神招聘助手--招聘数据融合管理插件，一键节省50%人才筛选时间！",
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.31",
     "@eslint/compat": "^1.2.6",
@@ -65,8 +66,8 @@
     "web-ext": "^8.4.0",
     "webext-bridge": "^6.0.1"
   },
-  "displayName": "Vite Vue 3 Chrome Extension",
-  "name": "vite-vue3-browser-extension-v3",
+  "displayName": "小神助手",
+  "name": "小神助手",
   "overrides": {
     "@crxjs/vite-plugin": "$@crxjs/vite-plugin"
   },
